--- a/index.html
+++ b/index.html
@@ -467,88 +467,53 @@
                             <p>Build a Developer student community to help students to learn, 
                             contribute more towards the community and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src="assets/images/client-1.png" alt="client thumb">
-                                <h4>Bob Frapples
-                                    <br> <span>CEO Finance</span>
-                                </h4>
-
+                                <img src="" alt="GDSC">
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
-                            <h3>Expert front-end developer</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum is
-                                simply
-                                dummy text of the printing and typesetting industry. simply dummy text of the
-                                printing
-                                and
-                                typesetting industry. </p>
+                            <h3>Azure Developer Community</h3>
+                            <p>Conducted lot of sessions to help students to learn about Azure and created goal oriented 
+                            tracks to learn more about Azure.</p>
                             <div class="client-data d-flex">
-                                <img src="assets/images/client-2.png" alt="client thumb">
-                                <h4>Brock Lee
-                                    <br> <span>Finace expert</span>
-                                </h4>
-
+                                <img src="" alt="AzureDev">
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
-                            <h3>Ui design project</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum is
-                                simply
-                                dummy text of the printing and typesetting industry. simply dummy text of the
-                                printing
-                                and
-                                typesetting industry. </p>
+                            <h3>AWS USER GROUP MADURAI</h3>
+                            <p>I am a core team member of AWS USER GROUP MADURAI.Gave session on AWS Cloud Monitoring and 
+                            contributed in quiz and posters.</p>
                             <div class="client-data d-flex">
-                                <img src="assets/images/client-1.png" alt="client thumb">
-                                <h4>Bob Frapples
-                                    <br> <span>CEO Finance</span>
-                                </h4>
-
+                                <img src="" alt="AWSUGMDU">
                             </div>
                         </div>
-                        <div class="testmonial-item">
-                            <h3>Expert front-end developer</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum is
-                                simply
-                                dummy text of the printing and typesetting industry. simply dummy text of the
-                                printing
-                                and
-                                typesetting industry. </p>
+                        <div class="testmonial-item  ">
+                            <h3>Google Devloper Group Madurai</h3>
+                            <p>I am a core team member.Learned a lot about flutter and firebase and provided sessions on 
+                            firebase and flutter.</p>
                             <div class="client-data d-flex">
-                                <img src="assets/images/client-2.png" alt="client thumb">
-                                <h4>Brock Lee
-                                    <br> <span>Finace expert</span>
-                                </h4>
-
+                                <img src="" alt="GDG-MDU">
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
-                            <h3>Ui design project</h3>
-                            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                Ipsum is
-                                simply
-                                dummy text of the printing and typesetting industry. simply dummy text of the
-                                printing
-                                and
-                                typesetting industry. </p>
+                            <h4>Google Developer Studets Club Lead</h3>
+                            <p>Build a Developer student community to help students to learn, 
+                            contribute more towards the community and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src="assets/images/client-1.png" alt="client thumb">
-                                <h4>Bob Frapples
-                                    <br> <span>CEO Finance</span>
-                                </h4>
-
+                                <img src="" alt="GDSC">
                             </div>
                         </div>
-                    </div>
-
-                </div>
-            </div>
+                        <!-- item -->
+                        <div class="testmonial-item">
+                            <h5>Azure Developer Community</h3>
+                            <p>Conducted lot of sessions to help students to learn about Azure and created goal oriented 
+                            tracks to learn more about Azure.</p>
+                            <div class="client-data d-flex">
+                                <img src="" alt="AzureDev">
+                            </div>
+                        </div>              
         </section>
         <!-- Contact Me -->
         <section class="contact ptb-100" id="contact">
