--- a/index.html
+++ b/index.html
@@ -455,65 +455,60 @@
                 </div>
             </div>
         </section>
-        <!-- Testmonial -->
+      <!-- Testmonial -->
         <section class="testmonial">
             <div class="container">
                 <div class="testmonial-inner">
-                    <h2>Communities that I have Involved</h2>
+                    <h2>Developer Communities /h2>
                     <div class="testmonial-slider owl-carousel owl-theme">
                         <!-- item -->
                         <div class="testmonial-item">
                             <h3>Google Developer Studets Club Lead</h3>
                             <p>Build a Developer student community to help students to learn, 
-                            contribute more towards the community and provided sessions to upskill themshelves.</p>
+                                contribute and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src="" alt="GDSC">
+                                <img src=" " >
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
                             <h3>Azure Developer Community</h3>
                             <p>Conducted lot of sessions to help students to learn about Azure and created goal oriented 
-                            tracks to learn more about Azure.</p>
+                                tracks to learn more about Azure.</p>
                             <div class="client-data d-flex">
-                                <img src="" alt="AzureDev">
+                                <img src="" >
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
                             <h3>AWS USER GROUP MADURAI</h3>
                             <p>I am a core team member of AWS USER GROUP MADURAI.Gave session on AWS Cloud Monitoring and 
-                            contributed in quiz and posters.</p>
+                                contributed in quiz and posters.</p>
                             <div class="client-data d-flex">
-                                <img src="" alt="AWSUGMDU">
+                                <img src="">
                             </div>
                         </div>
-                        <div class="testmonial-item  ">
-                            <h3>Google Devloper Group Madurai</h3>
-                            <p>I am a core team member.Learned a lot about flutter and firebase and provided sessions on 
-                            firebase and flutter.</p>
-                            <div class="client-data d-flex">
-                                <img src="" alt="GDG-MDU">
-                            </div>
-                        </div>
-                        <!-- item -->
                         <div class="testmonial-item">
                             <h3>Google Developer Studets Club Lead</h3>
                             <p>Build a Developer student community to help students to learn, 
-                            contribute more towards the community and provided sessions to upskill themshelves.</p>
+                                contribute and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src="" alt="GDSC">
+                                <img src="">
                             </div>
                         </div>
                         <!-- item -->
                         <div class="testmonial-item">
-                            <h4>Azure Developer Community</h4>
-                            <p>Conducted lot of sessions to help students to learn about Azure and created goal oriented 
-                            tracks to learn more about Azure.</p>
+                            <h3>Google Developer Group Madurai</h3>
+                            <p>I am a core team member.Learned a lot about flutter and firebase and provided sessions on 
+                                firebase and flutter.</p>
                             <div class="client-data d-flex">
-                                <img src="" alt="AzureDev">
+                                <img src="">
                             </div>
-                        </div>              
+                        </div>
+                    </div>
+
+                </div>
+            </div>
         </section>
         <!-- Contact Me -->
         <section class="contact ptb-100" id="contact">
