--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
         <section class="testmonial">
             <div class="container">
                 <div class="testmonial-inner">
-                    <h2>Developer Communities /h2>
+                    <h2>Developer Communities </h2>
                     <div class="testmonial-slider owl-carousel owl-theme">
                         <!-- item -->
                         <div class="testmonial-item">
