--- a/index.html
+++ b/index.html
@@ -467,7 +467,7 @@
                             <p>Build a Developer student community to help students to learn, 
                                 contribute and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src=" " >
+                                <img src="assets/images/GDSC Logo.png" >
                             </div>
                         </div>
                         <!-- item -->
@@ -476,7 +476,7 @@
                             <p>Conducted lot of sessions to help students to learn about Azure and created goal oriented 
                                 tracks to learn more about Azure.</p>
                             <div class="client-data d-flex">
-                                <img src="" >
+                                <img src="assets/images/AzureDev icon.png" >
                             </div>
                         </div>
                         <!-- item -->
@@ -485,7 +485,7 @@
                             <p>I am a core team member of AWS USER GROUP MADURAI.Gave session on AWS Cloud Monitoring and 
                                 contributed in quiz and posters.</p>
                             <div class="client-data d-flex">
-                                <img src="">
+                                <img src="assets/images/AWSUG logo.jpg">
                             </div>
                         </div>
                         <div class="testmonial-item">
@@ -493,7 +493,7 @@
                             <p>Build a Developer student community to help students to learn, 
                                 contribute and provided sessions to upskill themshelves.</p>
                             <div class="client-data d-flex">
-                                <img src="">
+                                <img src="assets/images/GDSC Logo.png">
                             </div>
                         </div>
                         <!-- item -->
@@ -502,7 +502,7 @@
                             <p>I am a core team member.Learned a lot about flutter and firebase and provided sessions on 
                                 firebase and flutter.</p>
                             <div class="client-data d-flex">
-                                <img src="">
+                                <img src="assets/images/GDG icon.png">
                             </div>
                         </div>
                     </div>
